Testing some js stuff; unable to return json properly.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 		<title>This is a test</title>
 	</head>
 	<body>
-		marsrover.io test page!
+		<h1>marsrover.io test page!</h1>
+		<p><a href="jstest.html">Click here to test some code!</a></p>
 	</body>
 </html>
